# FitByte

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/db/: mod.rs
src/db/migrations/: 20250119032938_fitbyte_initial_migration.down.sql  20250119032938_fitbyte_initial_migration.up.sql
src/errors/: mod.rs
src/handlers/: activity.rs  auth.rs  file.rs  mod.rs  profile.rs
src/models/: activity.rs  mod.rs  user.rs
src/utils/: jwt.rs  validation.rs
